--- a/index.html
+++ b/index.html
@@ -5,14 +5,90 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Identitas Mahasiswa</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 100px; }
-    h1 { color: #007bff; }
+    /* Gaya umum */
+    body {
+      margin: 0;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #74ABE2, #5563DE);
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+    }
+
+    /* Kartu utama */
+    .card {
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      padding: 40px 60px;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    /* Efek hover */
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 35px rgba(0, 0, 0, 0.3);
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 28px;
+      letter-spacing: 1px;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+    }
+
+    p {
+      font-size: 18px;
+      margin: 8px 0;
+    }
+
+    /* Animasi fade-in */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .card {
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    /* Tombol interaktif */
+    button {
+      margin-top: 20px;
+      padding: 10px 25px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      background-color: #fff;
+      color: #5563DE;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    button:hover {
+      background-color: #5563DE;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
-  <h1>Identitas Mahasiswa</h1>
-  <p><b>NIM:</b> 230411100120</p>
-  <p><b>Nama:</b> Vidi Pratama Adityas Mauladani</p>
-  <p><b>Program Studi:</b> Teknik Informatika</p>
+  <div class="card">
+    <h1>Identitas Mahasiswa</h1>
+    <p><b>NIM:</b> 230411100120</p>
+    <p><b>Nama:</b> Vidi Pratama Adityas Mauladani</p>
+    <p><b>Program Studi:</b> Teknik Informatika</p>
+    <button onclick="greet()">Klik untuk Sapaan</button>
+  </div>
+
+  <script>
+    function greet() {
+      alert("Halo, Vidi! Selamat datang di halaman identitasmu 🎓");
+    }
+  </script>
 </body>
 </html>
