--- a/index.html
+++ b/index.html
@@ -5,90 +5,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Identitas Mahasiswa</title>
   <style>
-    /* Gaya umum */
+    /* Latar belakang gradient animasi */
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     body {
       margin: 0;
       font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #74ABE2, #5563DE);
+      background: linear-gradient(270deg, #74ABE2, #5563DE, #7D63FF);
+      background-size: 600% 600%;
+      animation: gradientMove 10s ease infinite;
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
       color: #fff;
     }
 
-    /* Kartu utama */
+    /* Kartu utama transparan */
     .card {
       background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(10px);
-      padding: 40px 60px;
-      border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(12px);
+      padding: 50px 70px;
+      border-radius: 25px;
+      box-shadow: 0 8px 35px rgba(0, 0, 0, 0.3);
       text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    /* Efek hover */
-    .card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 10px 35px rgba(0, 0, 0, 0.3);
+      position: relative;
+      z-index: 2;
+      animation: fadeIn 1.2s ease-in-out;
     }
 
     h1 {
       margin-bottom: 20px;
-      font-size: 28px;
+      font-size: 30px;
       letter-spacing: 1px;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
     p {
       font-size: 18px;
-      margin: 8px 0;
+      margin: 10px 0;
     }
 
     /* Animasi fade-in */
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
+      from { opacity: 0; transform: translateY(25px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    .card {
-      animation: fadeIn 1s ease-in-out;
+    /* Efek glowing di sekitar kartu */
+    .glow {
+      position: absolute;
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+      background: radial-gradient(circle, rgba(255,255,255,0.3), transparent 70%);
+      animation: floatGlow 6s ease-in-out infinite alternate;
+      filter: blur(40px);
+      z-index: 1;
     }
 
-    /* Tombol interaktif */
-    button {
-      margin-top: 20px;
-      padding: 10px 25px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background-color: #fff;
-      color: #5563DE;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    button:hover {
-      background-color: #5563DE;
-      color: #fff;
+    /* Animasi cahaya lembut bergerak */
+    @keyframes floatGlow {
+      from { transform: translate(-100px, -100px); }
+      to { transform: translate(100px, 100px); }
     }
   </style>
 </head>
 <body>
+  <!-- Ornamen cahaya lembut -->
+  <div class="glow"></div>
+
+  <!-- Kartu identitas -->
   <div class="card">
     <h1>Identitas Mahasiswa</h1>
     <p><b>NIM:</b> 230411100120</p>
     <p><b>Nama:</b> Vidi Pratama Adityas Mauladani</p>
     <p><b>Program Studi:</b> Teknik Informatika</p>
-    <button onclick="greet()">Klik untuk Sapaan</button>
   </div>
-
-  <script>
-    function greet() {
-      alert("Halo, Vidi! Selamat datang di halaman identitasmu 🎓");
-    }
-  </script>
 </body>
 </html>
