--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profil Mahasiswa</title>
   <style>
-    /* Latar belakang gradien animasi */
+    /* Background gradien animasi */
     @keyframes gradientShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -46,7 +46,7 @@
       font-size: 42px;
       margin-bottom: 10px;
       letter-spacing: 1px;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     }
 
     h2 {
@@ -61,16 +61,15 @@
       margin: 8px 0;
     }
 
-    /* Animasi teks masuk */
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(25px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* Ornamen gelembung halus */
+    /* Ornamen gelembung lembut */
     .bubble {
       position: absolute;
-      bottom: -50px;
+      bottom: -60px;
       background: rgba(255, 255, 255, 0.25);
       border-radius: 50%;
       animation: rise 10s infinite ease-in;
@@ -83,18 +82,17 @@
   </style>
 </head>
 <body>
-  <header>
-    Profil Mahasiswa
-  </header>
+  <header>🌐 Website Profil Mahasiswa</header>
 
   <main>
-    <h1>Vidi Pratama Adityas Mauladani</h1>
-    <h2>Mahasiswa Teknik Informatika</h2>
-    <p><b>NIM:</b> 230411100120</p>
-    <p><b>Universitas:</b> Universitas Trunojoyo Madura</p>
+    <h1>Identitas Mahasiswa</h1>
+    <p>NIM: 230411100120</p>
+    <p>Nama: Vidi Pratama Adityas Mauladani</p>
+    <p>Program Studi: Teknik Informatika</p>
+    <p>Universitas: Universitas Trunojoyo Madura</p>
   </main>
 
-  <!-- Ornamen gelembung animasi -->
+  <!-- Ornamen gelembung -->
   <div class="bubble" style="width:80px; height:80px; left:10%; animation-delay:0s;"></div>
   <div class="bubble" style="width:50px; height:50px; left:25%; animation-delay:3s;"></div>
   <div class="bubble" style="width:100px; height:100px; left:70%; animation-delay:5s;"></div>
