--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil Mahasiswa</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Identitas Mahasiswa</title>
   <style>
-    /* Background gradien animasi */
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
     body {
       margin: 0;
+      padding: 0;
       font-family: "Poppins", sans-serif;
-      background: linear-gradient(-45deg, #5A60EA, #6BC1FF, #67E6DC, #48C6EF);
-      background-size: 400% 400%;
-      animation: gradientShift 10s ease infinite;
+      background: linear-gradient(135deg, #667eea, #764ba2);
       color: #fff;
       min-height: 100vh;
       display: flex;
@@ -25,77 +17,43 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      overflow: hidden;
-    }
-
-    header {
-      position: absolute;
-      top: 30px;
-      width: 100%;
-      text-align: center;
-      font-size: 22px;
-      font-weight: 600;
-      letter-spacing: 1px;
-    }
-
-    main {
-      animation: fadeIn 1.5s ease;
     }
 
     h1 {
-      font-size: 42px;
-      margin-bottom: 10px;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
       letter-spacing: 1px;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
-    }
-
-    h2 {
-      font-size: 22px;
-      font-weight: 400;
-      margin-bottom: 40px;
-      opacity: 0.9;
     }
 
     p {
-      font-size: 18px;
-      margin: 8px 0;
+      font-size: 1.2rem;
+      margin: 0.4rem 0;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(25px); }
-      to { opacity: 1; transform: translateY(0); }
+    footer {
+      position: fixed;
+      bottom: 15px;
+      font-size: 0.9rem;
+      opacity: 0.8;
     }
 
-    /* Ornamen gelembung lembut */
-    .bubble {
-      position: absolute;
-      bottom: -60px;
-      background: rgba(255, 255, 255, 0.25);
-      border-radius: 50%;
-      animation: rise 10s infinite ease-in;
+    @keyframes fade {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
-    @keyframes rise {
-      from { transform: translateY(0) scale(1); opacity: 1; }
-      to { transform: translateY(-110vh) scale(1.3); opacity: 0; }
+    main {
+      animation: fade 1s ease-in-out;
     }
   </style>
 </head>
 <body>
-  <header>🌐 Website Profil Mahasiswa</header>
-
   <main>
     <h1>Identitas Mahasiswa</h1>
-    <p>NIM: 230411100120</p>
-    <p>Nama: Vidi Pratama Adityas Mauladani</p>
-    <p>Program Studi: Teknik Informatika</p>
-    <p>Universitas: Universitas Trunojoyo Madura</p>
+    <p><b>NIM:</b> 230411100120</p>
+    <p><b>Nama:</b> Vidi Pratama Adityas Mauladani</p>
+    <p><b>Program Studi:</b> Teknik Informatika</p>
   </main>
-
-  <!-- Ornamen gelembung -->
-  <div class="bubble" style="width:80px; height:80px; left:10%; animation-delay:0s;"></div>
-  <div class="bubble" style="width:50px; height:50px; left:25%; animation-delay:3s;"></div>
-  <div class="bubble" style="width:100px; height:100px; left:70%; animation-delay:5s;"></div>
-  <div class="bubble" style="width:60px; height:60px; left:85%; animation-delay:1s;"></div>
+  <footer>© 2025 Vidi Pratama Adityas Mauladani</footer>
 </body>
 </html>
