--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
     body {
       margin: 0;
       padding: 0;
+      height: 100vh;
       font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #667eea, #764ba2);
+      background: radial-gradient(circle at top left, #667eea, #764ba2);
       color: #fff;
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
+      overflow: hidden;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 1rem;
-      letter-spacing: 1px;
+      text-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
     }
 
     p {
       font-size: 1.2rem;
       margin: 0.4rem 0;
+      letter-spacing: 0.5px;
     }
 
     footer {
@@ -37,23 +38,68 @@
       opacity: 0.8;
     }
 
-    @keyframes fade {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
+    /* Animasi fade in */
+    main {
+      animation: fadeIn 1.5s ease;
+      z-index: 2;
     }
 
-    main {
-      animation: fade 1s ease-in-out;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Ornamen bulat bergerak */
+    .circle {
+      position: absolute;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.15);
+      animation: float 10s infinite ease-in-out alternate;
+    }
+
+    .circle:nth-child(1) {
+      width: 120px;
+      height: 120px;
+      top: 10%;
+      left: 20%;
+      animation-delay: 0s;
+    }
+
+    .circle:nth-child(2) {
+      width: 80px;
+      height: 80px;
+      top: 60%;
+      right: 15%;
+      animation-delay: 2s;
+    }
+
+    .circle:nth-child(3) {
+      width: 150px;
+      height: 150px;
+      bottom: 10%;
+      left: 10%;
+      animation-delay: 4s;
+    }
+
+    @keyframes float {
+      from { transform: translateY(0) scale(1); }
+      to { transform: translateY(-30px) scale(1.1); }
     }
   </style>
 </head>
 <body>
+  <!-- Ornamen -->
+  <div class="circle"></div>
+  <div class="circle"></div>
+  <div class="circle"></div>
+
   <main>
     <h1>Identitas Mahasiswa</h1>
     <p><b>NIM:</b> 230411100120</p>
     <p><b>Nama:</b> Vidi Pratama Adityas Mauladani</p>
     <p><b>Program Studi:</b> Teknik Informatika</p>
   </main>
+
   <footer>© 2025 Vidi Pratama Adityas Mauladani</footer>
 </body>
 </html>
