--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       height: 100vh;
       font-family: "Poppins", sans-serif;
-      background: radial-gradient(circle at top left, #667eea, #764ba2);
+      background: linear-gradient(135deg, #1E3C72, #2A5298); /* biru elegan */
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -38,7 +38,7 @@
       opacity: 0.8;
     }
 
-    /* Animasi fade in */
+    /* Animasi fade-in */
     main {
       animation: fadeIn 1.5s ease;
       z-index: 2;
@@ -49,7 +49,7 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* Ornamen bulat bergerak */
+    /* Ornamen biru muda transparan */
     .circle {
       position: absolute;
       border-radius: 50%;
@@ -61,29 +61,29 @@
       width: 120px;
       height: 120px;
       top: 10%;
-      left: 20%;
+      left: 25%;
       animation-delay: 0s;
     }
 
     .circle:nth-child(2) {
-      width: 80px;
-      height: 80px;
-      top: 60%;
-      right: 15%;
+      width: 90px;
+      height: 90px;
+      bottom: 20%;
+      right: 20%;
       animation-delay: 2s;
     }
 
     .circle:nth-child(3) {
-      width: 150px;
-      height: 150px;
-      bottom: 10%;
+      width: 160px;
+      height: 160px;
+      top: 50%;
       left: 10%;
       animation-delay: 4s;
     }
 
     @keyframes float {
       from { transform: translateY(0) scale(1); }
-      to { transform: translateY(-30px) scale(1.1); }
+      to { transform: translateY(-25px) scale(1.1); }
     }
   </style>
 </head>
@@ -95,11 +95,9 @@
 
   <main>
     <h1>Identitas Mahasiswa</h1>
-    <p><b>NIM:</b> 230411100120</p>
     <p><b>Nama:</b> Vidi Pratama Adityas Mauladani</p>
+    <p><b>NIM:</b> 230411100120</p>
     <p><b>Program Studi:</b> Teknik Informatika</p>
   </main>
-
-  <footer>© 2025 Vidi Pratama Adityas Mauladani</footer>
 </body>
 </html>
